# frappe_kingdee_sync

./: README.md
kingdee_sync/: README.md  pyproject.toml
kingdee_sync/kingdee_sync/: commands.py  custom_field_utils.py  hooks.py  install.py  kingdee_client.py  modules.txt  patches.txt  sync_engine.py  tasks.py
kingdee_sync/kingdee_sync/kingdee_sync/doctype/kingdee_settings/: kingdee_settings.js  kingdee_settings.json  kingdee_settings.py
kingdee_sync/kingdee_sync/kingdee_sync/doctype/kingdee_sync_field_mapping/: kingdee_sync_field_mapping.json  kingdee_sync_field_mapping.py
kingdee_sync/kingdee_sync/kingdee_sync/doctype/kingdee_sync_log/: kingdee_sync_log.json  kingdee_sync_log.py
kingdee_sync/kingdee_sync/kingdee_sync/doctype/kingdee_sync_profile/: kingdee_sync_profile.js  kingdee_sync_profile.json  kingdee_sync_profile.py
kingdee_sync/kingdee_sync/kingdee_sync/doctype/kingdee_sync_variant_attribute/: kingdee_sync_variant_attribute.json  kingdee_sync_variant_attribute.py
